# drift-with-trailer

./: .gitignore  README.md  best_mppi_car_params.json  optuna_mppi_car.db  optuna_smppi.db  optuna_smppi_car.db  pyproject.toml
docs/reading-list/: papers.md
docs/tasks/: 001_nonlinear_mpc_cartpole_swingup.md  002_mppi_smooth_mppi_cartpole.md  003_racecar_jax_mppi.md  004_fiala_trailer_ice_mppi.md  005_trailer_model_mismatch_mppi.md  006_online_learned_cartpole_mppi.md  007_vehicle_residual_dynamics_mppi.md
examples/: cartpole_mpc.py  cartpole_mpc_mppi_jax.py  cartpole_mpc_mppi_pytorch.py  cartpole_mpc_smppi_jax.py  cartpole_mpc_smppi_pytorch.py  cartpole_smoke.py
experiments/exp_001_mpc_baseline/: README.md  cartpole_mpc_test.py  run_cartpole_mpc.py  run_cartpole_mppi_pytorch_mpc.py
experiments/exp_002_mppi_smooth_mppi/: README.md  benchmark_results.md  run_cartpole_mppi_jax_mpc.py  run_cartpole_mppi_pytorch_mpc.py  run_cartpole_smppi_jax_mpc.py  run_cartpole_smppi_pytorch_mpc.py  run_mpc_benchmark.py
experiments/exp_003_racecar_mppi/: README.md  dynamics.py  run_benchmark.py  run_car_mppi.py  run_car_smppi.py  run_car_smppi_optuna.py
experiments/exp_004_fiala_trailer_ice/: README.md  run_benchmark_car.py  run_benchmark_trailer.py  run_bicycle_fiala_mppi.py  run_bicycle_fiala_smppi.py  run_bicycle_mppi_optuna.py  run_trailer_bicycle_fiala_mppi.py  run_trailer_bicycle_fiala_smppi.py
experiments/exp_005_trailer_model_mismatch/: README.md
experiments/exp_006_learned_cartpole_dynamics/: README.md  cartpole_nn_dynamics.py  cartpole_utils.py  run_cartpole_nn.py
experiments/exp_007_vehicle_residual_dynamics/: README.md
results/tables/: benchmark_results.md  task3.md
src/controllers/: __init__.py
src/simulation/: bicycle_env.py  (+3 more)
(+44 files in other folders)
