[project]
name = "drift-with-trailer"
version = "0.1.0"
description = "Research code for MPC, learning, and adaptation for vehicle/trailer systems."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "casadi>=3.7.2",
    "gymnasium>=1.3.0",
    "jax>=0.10.0",
    "numpy>=2.0.0",
    "opencv-python>=4.13.0.92",
    "optuna>=4.8.0",
    "optuna-dashboard>=0.20.0",
    "pygame>=2.6.1",
    # "torch",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
